# aet-ml

./: .gitignore  AGENTS.md  DATASET_PIPELINE.md  LT2_METHOD.md  RESULTS.md  V0201_README.md  lith_review.md  litreview_ch2_v5.docx  methods_chapter.docx  nn-versions-plan.md  output.docx  output.md  plan.md  pravki.md  preza-text.md  priznaki.docx  pyproject.toml  temp.docx  temp.md  testdata.md  ~$iznaki.docx  ~$output.docx  ~$thods_chapter.docx  ~$мразов.docx  Тамразов.backup_before_autopravki.docx  Тамразов.docx
new_arch/: .gitignore  README.md  _smoke_test.py  architectures.py  common_lib.py  features.py  kalman.py  linear_runner.py  lstm_runner.py  lstm_stateful_runner.py  pyproject.toml  tcn_runner.py  training_utils.py
new_arch/analysis/: __init__.py  aggregation.py  comparisons.py  conclusions.py  config.toml  conformal.py  loader.py  lt_search_viz.py  metrics.py  plotting.py  ranking.py  reporting.py  run_analysis.py  schemas.py  statistics.py  training_dynamics.py  validation.py
new_arch/analysis_out/: discovery_report.json
new_arch/analysis_out/comparisons/: abs_within_arch.parquet  attention_vs_plain.parquet  family_overall.parquet  lt1_vs_lt2_per_model_class.parquet  modality_within_family.parquet  (+3 more)
new_arch/dataset/: cwt_cache.npz  features_emg_kinematics.parquet  features_hrv.parquet  lt1_labels.parquet  qc_windows.parquet  sequence_index.parquet  session_params.parquet  targets.parquet  windows.parquet
new_arch/dataset_pipeline/: common.py  emg_kinematics.py  hrv.py  merge.py  nirs.py  subjects.py  targets.py  windows.py
new_arch/methods/: __init__.py  pedal_cycles.py  trainred_alignment.py
new_arch/models/: lstm.py  tcn.py
new_arch/orchestrator/: gen_jobs.py  jobs.csv  run.py
new_arch/scripts/: check_self_contained.sh  slide_visualizations.py
(+2552 files in other folders)
