[project]
name = "dissertation-pipeline"
version = "0.1.0"
description = "Пайплайн обработки физиологических сигналов и моделирования порога."
requires-python = ">=3.13,<3.14"
dependencies = [
    "h5py>=3.16.0",
    "matplotlib>=3.10.9",
    "numpy>=2.4.4",
    "pandas>=3.0.2",
    "pyarrow>=24.0.0",
    "pywavelets>=1.6",
    "scipy>=1.17.1",
]
