[project]
name = "dissertation-pipeline"
version = "0.1.0"
description = "Пайплайн обработки физиологических сигналов и моделирования порога."
requires-python = ">=3.13,<3.14"
dependencies = [
    "h5py>=3.16.0",
    "lightgbm>=4.6.0",
    "matplotlib>=3.10.9",
    "numpy>=2.4.4",
    "pandas>=3.0.2",
    "plotly>=6.7.0",
    "pyarrow>=24.0.0",
    "pywavelets>=1.6",
    "scikit-learn>=1.8.0",
    "scipy>=1.17.1",
    "seaborn>=0.13.2",
    "shap>=0.51.0",
    "tabulate>=0.10.0",
    "torch>=2.0.0",
    "pytorch-lightning>=2.0.0",
    "nvidia-ml-py>=13.595.45",
]
